--- a/style.css
+++ b/style.css
@@ -1,4 +1,70 @@
-<<<<<<< Updated upstream
+@font-face {
+    font-family: 'RocaOne-Rg';
+    src: url('RocaOne-Rg.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+* {
+    font-family: 'RocaOne-Rg';
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: rgb(238, 236, 222);
+}
+
+.title, .paragraph {
+    color: rgb(21, 102, 105);
+    text-align: center;
+    font-size: 75px;
+    margin-top:150px;
+}
+
+.paragraph {
+    font-size: 20px;
+    margin: 20px;
+}
+
+.btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn {
+    font-family: 'RocaOne-Rg', sans-serif;
+    font-weight: 800;
+    font-size: 25px;
+    color: #fff;
+    background-color: #156669;
+    padding: 10px 30px;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    text-transform: lowercase;
+    transition: 525ms;
+}
+
+.btn:hover {
+    padding: 10px 19px;
+    transform: translateY(-5px);
+    background-color: #156669;
+    color: #ffffff;
+}
+
+.bag {
+    display: block;
+    margin-left: auto;
+    margin-right: 35%;
+    width: 300px;
+    height: 350px;
+}
+
+
+
 body {
     margin: 0;
     padding: 0;
@@ -57,8 +123,3 @@ body {
     margin-top:150px;
     padding:25px;
 }
-=======
-
-
-
->>>>>>> Stashed changes
